<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/please_enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:hint="@string/please_enter_phone_number"
        android:ems="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:onClick="btnSubmit"
        android:layout_marginRight="30dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:onClick="btnShowData"
        android:layout_marginRight="30dp"
        android:text="@string/show_data" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:onClick="btnEditData"
        android:layout_marginRight="30dp"
        android:text="@string/edit_data" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:onClick="btnDeleteData"
        android:layout_marginRight="30dp"
        android:text="@string/delete_data" />
</LinearLayout>